# PredictionMarket

./: .gitignore  README.md  paper.tex  pyproject.toml  run_checkpoints.py
src/analysis/checkpoints/cp00a_data_validation/: kalshi.py  polymarket.py
src/analysis/checkpoints/cp01_market_overview/: kalshi.py  polymarket.py
src/analysis/checkpoints/cp02_longshot_bias/: kalshi.py  polymarket.py
src/analysis/checkpoints/cp03_maker_taker_pnl/: kalshi.py
src/analysis/checkpoints/cp04_spread_analysis/: kalshi.py
src/analysis/checkpoints/cp05_category_heterogeneity/: kalshi.py
src/analysis/checkpoints/cp06_temporal_dynamics/: kalshi.py  polymarket.py
src/analysis/checkpoints/cp07_yes_no_asymmetry/: kalshi.py
src/analysis/checkpoints/cp08_symmetric_price_asymmetry/: kalshi.py
src/analysis/checkpoints/cp09_volume_demand_elasticity/: kalshi.py
src/analysis/checkpoints/cp10_hhi_concentration/: kalshi.py  polymarket.py
src/analysis/checkpoints/cp11_category_adverse_selection/: kalshi.py
src/analysis/checkpoints/cp12_data_limitations/: kalshi.py  polymarket.py
src/analysis/checkpoints/cp13_sports_sentiment_arbitrage/: kalshi.py
src/analysis/kalshi/util/: categories.py
src/common/: metrics.py  plot_style.py
