[project]
name = "prediction-market-paper"
version = "0.1.0"
description = "Prediction Market Microstructure — IFC paper analysis pipeline"
requires-python = ">=3.9"
dependencies = [
    "duckdb>=1.4.2",
    "matplotlib>=3.9.4",
    "numpy>=1.26.0",
    "pandas>=2.3.3",
    "pyarrow>=18.0.0",
    "scipy>=1.13.1",
    "statsmodels>=0.14.0",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.9.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]

[tool.ruff]
target-version = "py39"
line-length = 120
exclude = [".venv"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["src"]
